--- a/index.html
+++ b/index.html
@@ -1,33 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
-    <title>PHPR Community Docs by Garbee</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>PHPR Community Docs</h1>
-        <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/Garbee/phpr-docs-temp/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Garbee/phpr-docs-temp/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Garbee/phpr-docs-temp" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
+---
+layout: default
+---
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -59,9 +32,3 @@ $ git checkout gh-pages
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    
-  </body>
-</html>
