--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@ layout: default
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
+
+<ul class="entries">
+  {% for page in developer.docs %}
+
+  <li>
+    <a href="{{ page.url }}">
+      <img src="{{ page.image }}" />
+      <h3>{{ page.title }}</h3>
+    </a>
+  </li>
+
+  {% endfor %}
+</ul>
+
+
+
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
