--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 
 <ul class="entries">
-  {% for page in developer.docs %}
+  {% for page in user %}
 
   <li>
     <a href="{{ page.url }}">
