--- a/contributor/docs.html
+++ b/contributor/docs.html
@@ -1,1 +1,4 @@
 <h3>Documenting PHPRoad</h3>
+<p>
+	The documentation of PHPRoad is completely built by and for the community of users. It covers things from installing the system and getting oriented with the system all the way to developing for the system. You can be among this awesome group of writers!
+</p>
