Fixed some whitespace issues in the default layout. Updated contributor docs.

--- a/contributor/docs.html
+++ b/contributor/docs.html
@@ -6,3 +6,21 @@ title: Documentation contributions
 <p>
 	The documentation of PHPRoad is completely built by and for the community of users. It covers things from installing the system and getting oriented with the system all the way to developing for the system. You can be among this awesome group of writers!
 </p>
+<h4>Categorization</h4>
+<p>
+	Our documents are broken into two main sections, user and developer docs. This allows us to talor the information being given to each type of reader. User docs cover using the system from a front-end view. Showing things such as how to install the system, update it, use the <abbr title="Content Management System">CMS</abbr> and user manager. While the developer docs cover actually programming for PHPRoad. They disclose how to build custom modules for clients, ones that allow them to update without fear of their site breaking.
+</p>
+<h4>Contributing</h4>
+<p>
+	There are many ways of contributing to these docs, even if you don't actually write yourself. You may:
+	<ul>
+		<li>Critique the writing.</li>
+		<li>Find missing information</li>
+		<li>Find incorrect information</li>
+		<li>Write new documents</li>
+	</ul>
+</p>
+<h5>Submitting</h5>
+<p>
+	Submitting any issues with the documentation can be done by submitting an issue or pull request on the docs repository. Please include where you see an issue and what you feel could make it better. The quickest way to get something updated, is to rewrite it and submit a pull request yourself. By doing so you save time for other writers and get the warm fuzzies of contributing. If you are unable to submit an issue on that repository, then you can contact others in the community and they can file it for you.
+</p>
