Removed unecessary section by moving its contents into the intro paragraph.

--- a/contributor/docs.html
+++ b/contributor/docs.html
@@ -4,21 +4,17 @@ title: Documentation contributions
 ---
 <h3>Documenting PHPRoad</h3>
 <p>
-	The documentation of PHPRoad is completely built by and for the community of users. It covers things from installing the system and getting oriented with the system all the way to developing for the system. You can be among this awesome group of writers!
-</p>
-<h4>Categorization</h4>
-<p>
-	Our documents are broken into two main sections, user and developer docs. This allows us to talor the information being given to each type of reader. User docs cover using the system from a front-end view. Showing things such as how to install the system, update it, use the <abbr title="Content Management System">CMS</abbr> and user manager. While the developer docs cover actually programming for PHPRoad. They disclose how to build custom modules for clients, ones that allow them to update without fear of their site breaking.
-</p>
-<h4>Contributing</h4>
-<p>
-	There are many ways of contributing to these docs, even if you don't actually write yourself. You may:
+	The documentation of PHPRoad is completely built by and for the community of users. It covers things from installing the system and getting oriented with the system all the way to developing for the system. You can be among this awesome group of writers! There are many ways of contributing to these docs, even if you don't actually write yourself. You may:
 	<ul>
 		<li>Critique the writing.</li>
 		<li>Find missing information</li>
 		<li>Find incorrect information</li>
 		<li>Write new documents</li>
 	</ul>
+</p>
+<h4>Categorization</h4>
+<p>
+	Our documents are broken into two main sections, user and developer docs. This allows us to talor the information being given to each type of reader. User docs cover using the system from a front-end view. Showing things such as how to install the system, update it, use the <abbr title="Content Management System">CMS</abbr> and user manager. While the developer docs cover actually programming for PHPRoad. They disclose how to build custom modules for clients, ones that allow them to update without fear of their site breaking.
 </p>
 <h5>Submitting</h5>
 <p>
