--- a/developer/admin_lists.html
+++ b/developer/admin_lists.html
@@ -1,1 +1,5 @@
+---
+layout: default
+title: Admin Lists
+---
 <p>Lists are a controller / view type that displays a list of a given model type. It allows a quick way to view a collection of models in a list format. Lists are often used with <a href="#">admin_forms</a>.</p>
