--- a/developer/back_end.html
+++ b/developer/back_end.html
@@ -1,1 +1,5 @@
+---
+layout: default
+title: Back-end
+---
 <ul class="wiki-toc"><li><a href="../adding_menu_items/index.html">Adding Menu Items</a> - describes how to add new menu items to the admin area</li><li><a href="../admin_lists/index.html">Lists</a> - displays a list of a given model type<ul class="wiki-toc"><li><a href="../creating_list_popups/index.html">Creating List Popups</a> - how to add popups to admin lists</li></ul></li></ul>
