--- a/developer/combine_minify_javascript_and_css.html
+++ b/developer/combine_minify_javascript_and_css.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Combine & Minify JavaScript and CSS
+---
 	<p>The front end page controller has two methods which let you combine, compress and minify JavaScript and CSS assets. With these methods you can reduce the number of external requests on a page and improve load time by compressing and caching the assets files. PHPR will automatically minify and compress asset files using GZIP.</p>
 <p>These methods allow you to include both local and remote files and the following <strong>$options</strong> are available:</p>
 <ul>
