--- a/developer/content_blocks_and_language_strings.html
+++ b/developer/content_blocks_and_language_strings.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Content blocks and language strings
+---
 <h2>Content Blocks</h2>
 <p>Content blocks let site owners easily manage content throughout their site, without the need for any special programming skills. The developer can allocate these spaces and comfortably allow a non-technical person to manage the content without fear of damaging the site's integrity.</p>
 <p>Content blocks let you keep HTML and page content separate from each other. You can add multiple content blocks to a page and edit them separately as well as control staff permissions. In some circumstances you may not want staff to be able to edit the page&rsquo;s code potentially causing damage. By only allowing access to content blocks you can therefore protect the page from any problems.</p>
