--- a/developer/creating_list_popups.html
+++ b/developer/creating_list_popups.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Creating list popups
+---
 <p>In this example we will replace the standard link in a list with a popup.</p>
 <p>Add to the controller head</p>
 <pre class="brush:php">// This property must be defined in the controller class
