--- a/developer/database_basics.html
+++ b/developer/database_basics.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Database Basics
+---
 	<p>In PHPR you have two different approaches to working with databases:</p>
 <ul>
 <li>Using Model classes which extend the <a href="../class_db_activerecord/index.html">Db_ActiveRecord</a> class</li>
