--- a/developer/database_files_and_images.html
+++ b/developer/database_files_and_images.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Database files and images
+---
 	<p>The Db_File class represents a link to the file system stored in the database. Usually you need to work with this class when you want to store files and images. The link created is maintained so if the object is deleted, the linked file is also deleted.</p>
 <p>Parent class: Db_ActiveRecord</p>
 <h2>Class fields</h2>
