--- a/developer/design_patterns.html
+++ b/developer/design_patterns.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Design Patterns
+---
 <p>The following article describes some best practice design approaches you can use when developing against PHPR.</p>
 <h3>Modular Design and Reusability</h3>
 <p>When building new functionality, you should consider as many possible ways your functionality can be used, both at a high level and a low level. At a higher level, this may mean creating multiple modules that interact with eachother. At a lower level, this could mean creating reusable classes that might be useful again for other scenarios.</p>
