--- a/developer/file_system.html
+++ b/developer/file_system.html
@@ -1,1 +1,5 @@
+---
+layout: default
+title: File System
+---
 	<ul class="wiki-toc"><li><a href="../directory_and_file_management/index.html">Directory &amp; File Management</a> - commands to modify local files and directories</li><li><a href="../image_manipulation/index.html">Image Manipulation</a> - create thumbnails and modify images</li><li><a href="../uploading_files/index.html">Uploading Files</a> - explains how files can be uploaded and stored</li></ul>
