--- a/developer/form_field_definitions.html
+++ b/developer/form_field_definitions.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Form Field Definitions
+---
 	<p>Form field definitions allow you to define how a field should be rendered in a form. Every column definition in&nbsp; a model can be defined and called as a chain.</p>
 <h3>Example</h3>
 <pre class="brush:php">public function define_form_fields($context = null)
