--- a/developer/front_end.html
+++ b/developer/front_end.html
@@ -1,1 +1,5 @@
+---
+layout: default
+title: Front-end
+---
 <ul class="wiki-toc"><li><a href="../templates_pages_and_partials/index.html">Templates, Pages &amp; Partials</a></li><li><a href="../content_blocks_and_language_strings/index.html">Content Blocks &amp; Strings</a> - Allows content management</li><li><a href="../combine_minify_javascript_and_css/index.html">Combine Javascript &amp; CSS</a> - shows how to combine and minify JavaScript and CSS files</li><li><a href="../javascript_framework/index.html">Javascript Framework</a></li></ul>
