--- a/developer/module_basics.html
+++ b/developer/module_basics.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Module Basics
+---
 <p>PHPR uses a modular approach to development. This means all the features, such as the CMS and Admin functions are provided by different modules. By developing your own module you can perform various tasks, such as:</p>
 <ul>
 <li>Adding new features to your site</li>
