--- a/developer/templates_pages_and_partials.html
+++ b/developer/templates_pages_and_partials.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Templates, Pages, and Partials
+---
 <p>You can create new site pages under <strong>Website &gt; Pages</strong> in the administration area.</p>
 <h3>Building Templates</h3>
 <p>x</p>
