--- a/developer/theme_tips_and_best_practices.html
+++ b/developer/theme_tips_and_best_practices.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Theme tips and best practices
+---
 <h3>Tab Indexes</h3>
 <p>Try to use <strong>tabindex</strong> property on your form inputs. This is for accessibility reasons.</p>
 <h3>Use onSubmit over onClick</h3>
