--- a/developer/using_deferred_bindings.html
+++ b/developer/using_deferred_bindings.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Using Deferred Bindings
+---
 	<p>Deferred binding allows you to postpone adding or deleting record relations until the master record is saved to the database. In other words, it lets you temporarily store database information until a transaction is complete. Think of it as <em>suspended animation</em> for storing for table relationships in the database. When a deferred binding is set up, it can be either:</p>
 <ul>
 <li>commited by saving the master record; or&nbsp;</li>
