--- a/developer/creating_a_module.html
+++ b/developer/creating_a_module.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Creating a module
+---
 	<p>This article describes the process of developing a module in it's purest form. A basic module must contain at least the module information class and should reside within the allocated <em>modules</em> directory. In addition to this, a module should include an updates directory which contains versioning information. To summarise a basic module file structure should look like this:</p>
 <ul>
 <li>bossblog
