--- a/developer/managing_table_structure.html
+++ b/developer/managing_table_structure.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Managing Table Structure
+---
 	<p>Database tables and records can be managed easily using a built-in feature which allows modules to create, update or delete database objects. These updates are applied along with the corresponding version information found in a module version info file (<em>version.dat</em>). You can read more about version information in the <a href="../creating_a_module/index.html">Creating a Module</a> article.</p>
 <p>When PHPR reads the version info file it will execute any logic found in a file name that matches the version number inside the <em>updates</em> directory. This is optional, if no corresponding file is found, PHPR will move to the next file until it reaches the most recent version.</p>
 <p>For example the module updates directory may look like this:</p>
