--- a/developer/network.html
+++ b/developer/network.html
@@ -1,1 +1,5 @@
+---
+layout: default
+title: Network
+---
 	<ul class="wiki-toc"><li><a href="../http_requests/index.html">HTTP Requests</a> - send a request through the network service</li></ul>
