--- a/developer/notifications.html
+++ b/developer/notifications.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Notifications
+---
 	<p>Notifications allow you to create generic notifications for your site. Some examples of this might be:</p>
 <ul>
 <li>Sending a Welcome Email to a User</li>
