--- a/developer/troubleshoot_development.html
+++ b/developer/troubleshoot_development.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Troubleshooting in Development
+---
 <p>By default detail error reporting is turned on. If somehow this feature is turned off, when there is a problem in a page, a friendly error message will be displayed. If you are developing it is helpful to see detailed error information which can be useful for debugging and troubleshooting issues.</p>
 <p>To ensure the friendly error messages are not displayed, open the config file (config/config.php) and locate the property <strong>SHOW_FRIENDLY_ERRORS</strong> and set this to &lsquo;false&rsquo;.</p>
 <pre class="brush:php">$CONFIG['SHOW_FRIENDLY_ERRORS'] = false;</pre><p>When development has ended, it is advised you enable friendly errors again to prevent users from seeing information about your site.</p>
